@@ -51,7 +51,6 @@ import com.celements.search.lucene.query.QueryRestrictionGroup;
 import com.celements.search.lucene.query.QueryRestrictionGroup.Type;
 import com.celements.search.lucene.query.QueryRestrictionString;
 import com.google.common.collect.BoundType;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
 import com.xpn.xwiki.XWikiContext;
 import com.xpn.xwiki.doc.XWikiDocument;
@@ -105,7 +104,7 @@ public class LuceneSearchService implements ILuceneSearchService {
   @Override
   public LuceneQuery createQuery() {
     LuceneQuery query = new LuceneQuery();
-    query.setDocTypes(ImmutableList.of(LuceneDocType.DOC));
+    query.setDocTypes(List.of(LuceneDocType.DOC));
     query.setWiki(context.getWikiRef());
     return query;
   }
@@ -169,21 +168,24 @@ public class LuceneSearchService implements ILuceneSearchService {
 
   @Override
   public QueryRestriction createRestriction(String field, String value) {
-    return createRestriction(field, value, DEFAULT_TOKENIZE, DEFAULT_FUZZY);
-  }
-
-  @Override
-  public QueryRestriction createRestriction(String field, String value, boolean tokenize) {
-    return createRestriction(field, value, tokenize, DEFAULT_FUZZY);
-  }
-
-  @Override
-  public QueryRestriction createRestriction(String field, String value, boolean tokenize,
-      boolean fuzzy) {
-    QueryRestriction restriction = new QueryRestriction(field, value, tokenize);
+    QueryRestriction restriction = new QueryRestriction(field, value);
     getLucenePlugin().map(LucenePlugin::getAnalyzer)
         .flatMap(a -> tryCast(a, CelAnalyzer.class))
         .ifPresent(restriction::setAnalyzer);
+    return restriction;
+  }
+
+  @Override
+  @Deprecated
+  public QueryRestriction createRestriction(String field, String value, boolean tokenize) {
+    return createRestriction(field, value).setTokenizeQuery(tokenize);
+  }
+
+  @Override
+  @Deprecated
+  public QueryRestriction createRestriction(String field, String value, boolean tokenize,
+      boolean fuzzy) {
+    QueryRestriction restriction = createRestriction(field, value, tokenize);
     return fuzzy ? restriction.setFuzzy() : restriction;
   }
 
@@ -390,9 +392,9 @@ public class LuceneSearchService implements ILuceneSearchService {
   @Override
   public QueryRestrictionGroup createAttachmentRestrictionGroup(List<String> mimeTypes,
       List<String> mimeTypesBlackList, List<String> filenamePrefs) {
-    mimeTypes = firstNonNull(mimeTypes, ImmutableList.<String>of());
-    mimeTypesBlackList = firstNonNull(mimeTypesBlackList, ImmutableList.<String>of());
-    filenamePrefs = firstNonNull(filenamePrefs, ImmutableList.<String>of());
+    mimeTypes = firstNonNull(mimeTypes, List.<String>of());
+    mimeTypesBlackList = firstNonNull(mimeTypesBlackList, List.<String>of());
+    filenamePrefs = firstNonNull(filenamePrefs, List.<String>of());
     QueryRestrictionGroup attGrp = createRestrictionGroup(Type.AND);
     attGrp.add(createRestrictionGroup(Type.OR, Arrays.asList(IndexFields.MIMETYPE),
         mimeTypes.stream().map(LuceneUtils::exactify).collect(toList())));
